--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "builds": [
     {
       "src": "django_project/wsgi.py",
-      "use": "@vercel/python"
+      "use": "@ardnt/vercel-python-wsgi"
     }
   ], 
   "routes": [
