--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,17 @@
     {
       "src": "django_project/wsgi.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
     }
   ], 
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },    
     {
       "src": "/(.*)",
       "dest": "django_project/wsgi.py"
