--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,10 @@
     },
     {
       "src": "build_files.sh",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles"
+      }      
     }
   ], 
   "routes": [
@@ -18,5 +21,6 @@
       "src": "/(.*)",
       "dest": "django_project/wsgi.py"
     }
-  ]
+  ],
+  "outputDirectory": "staticfiles"
 }
